build-pipeline.github/workflows/build-pipeline.yml

--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
       - run: |
           echo "This is a comment"
+          
+jobs:
+  add-beans:
+  grind-beans:
+    needs: add-beans
+  brew-coffee:
+    needs: [add-beans, grind-beans]
 
 jobs:
   deploy:
